2.80->2.93 - Blender does not report the number of lamps in the statistics for the 3D Viewport #88512

Closed
opened 2021-05-24 00:24:07 +02:00 by Carlo Andreacchio · 7 comments

System Information
Operating system: Ubuntu 20.04
Graphics card: GTX 1080

Blender Version
Broken: 2.80 all the way through to the latest buildbot of 2.93
Worked: 2.79

Short description of error
Blender does not report the number of lamps in the statistics for the 3D Viewport

Exact steps for others to reproduce the error

  1. Open Blender 2.79
  2. Notice on the top bar how it has the statistics, which includes the number of lamps visible in the 3D Viewport.
  3. Close Blender 2.79
  4. Open any blender from 2.8 -> 2.93
  5. Click the Viewport Overlays Button
  6. Enable 3D Viewport Statistics
  7. Notice how the number of lamps is missing

The number of lamps visible is important for optimization works, especially since cycles sampling quality is (currently) heavily dependent on the amount of lamps.

**System Information** Operating system: Ubuntu 20.04 Graphics card: GTX 1080 **Blender Version** Broken: 2.80 all the way through to the latest buildbot of 2.93 Worked: 2.79 **Short description of error** Blender does not report the number of lamps in the statistics for the 3D Viewport **Exact steps for others to reproduce the error** 1. Open Blender 2.79 2. Notice on the top bar how it has the statistics, which includes the number of lamps visible in the 3D Viewport. 3. Close Blender 2.79 4. Open any blender from 2.8 -> 2.93 5. Click the Viewport Overlays Button 6. Enable 3D Viewport Statistics 7. Notice how the number of lamps is missing The number of lamps visible is important for optimization works, especially since cycles sampling quality is (currently) heavily dependent on the amount of lamps.

Added subscriber: @candreacchio

Added subscriber: @candreacchio
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

I think this could be classified as a regression. Not too sure. Either way, I added the statistic back with this patch: D11387.

I think this could be classified as a regression. Not too sure. Either way, I added the statistic back with this patch: [D11387](https://archive.blender.org/developer/D11387).
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by b54e741a8b

This issue was referenced by b54e741a8b5655208ae666653639885afe15c5e8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2021-08-03 09:44:50 +02:00
Member

Committed b54e741a8b

Committed b54e741a8b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88512
No description provided.